--- a/line_plots/index.html
+++ b/line_plots/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <!-- D3 -->
-        <script src="http://d3js.org/d3.v4.min.js"></script>
+        <script src="//d3js.org/d3.v4.min.js"></script>
         <script src="//d3js.org/d3-queue.v3.min.js"></script>
         <!-- Heatmap -->
         <script src="js/circles.js" type="text/javascript"></script>
