--- a/tax_music/index.html
+++ b/tax_music/index.html
@@ -16,7 +16,7 @@
         <style>
         /* CSS */
         </style>
-        <link rel="icon" href="img/notes.png" />
+        <link rel="icon" href="tax_music/img/notes.png" />
     </head>
     <body>
         <script src="js/app.js" type="text/javascript"></script>
