--- a/tax_music/index.html
+++ b/tax_music/index.html
@@ -7,8 +7,10 @@
         <!-- D3 -->
         <script src="//d3js.org/d3.v4.min.js"></script>
         <script src="//d3js.org/d3-queue.v3.min.js"></script>
+        <script src="https://d3js.org/topojson.v3.min.js"></script>
         <!-- Heatmap -->
-        <script src="js/circles.js" type="text/javascript"></script>
+        <script src="js/notes.js" type="text/javascript"></script>
+        <script src="js/map.js" type="text/javascript"></script>
 
         <!-- CSS -->
         <link href="css/style.css" type="text/css" rel="stylesheet">
@@ -16,7 +18,7 @@
         <style>
         /* CSS */
         </style>
-        <link rel="icon" href="tax_music/img/notes.png" />
+        <link rel="icon" href="img/notes.png" />
     </head>
     <body>
         <script src="js/app.js" type="text/javascript"></script>
