--- a/tax_sounds/index.html
+++ b/tax_sounds/index.html
@@ -3,6 +3,7 @@
 
 <html>
     <head>
+        <title>Tax Music</title>
         <meta charset="utf-8">
         <!-- D3 -->
         <script src="//d3js.org/d3.v4.min.js"></script>
