--- a/tax_sounds/index.html
+++ b/tax_sounds/index.html
@@ -13,6 +13,7 @@
         <!--<script src="js/notes.js" type="text/javascript"></script>-->
         <script src="js/system.js" type="text/javascript"></script>
         <script src="js/map.js" type="text/javascript"></script>
+        <script src="js/interaction.js" type="text/javascript"></script>
 
         <!-- CSS -->
         <link href="css/style.css" type="text/css" rel="stylesheet">
